@@ -10,6 +10,10 @@
   pipeline stages during imports. This should bring additional
   performance when using album art plugins like embedart or
   beets-lyrics.
+* Accents and other Unicode decorators on characters are now treated
+  more fairly by the autotagger. For example, if you're missing the
+  acute accent on the "e" in "cafe", that change won't be penalized.
+  This introduces a new dependency on the "unidecode" Python module.
 * Fixed a problem where duplicate albums or items imported at the same
   time would fail to be detected.
 * BPD now uses a persistent "virtual filesystem" in order to fake a
